# widelands-planner

./: .gitignore  .gitmodules  blocks.py  clusters.py  dyn.py  flake.nix  pyproject.toml  state.py  streamlit_app.py
src/widelands_planner/: __init__.py  state.py  test.py
