[project]
name = "widelands-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Kuettel", email = "dkuettel@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
wplan = "widelands_planner:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
