[project]
name = "widelands-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Daniel Kuettel", email = "dkuettel@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pandas-stubs>=3.0.0.260204",
    "polars[style]>=1.39.0",
    "qpsolvers[clarabel]>=4.11.0",
    "streamlit>=1.55.0",
    "torch>=2.11.0",
]

[project.scripts]
wplan = "widelands_planner:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
ignore = ["widelands"]
reportUnusedCallResult = false
reportAny = false                   # st.session_state
reportUnnecessaryComparison = false # for case _ as never
reportUnreachable = false           # for assert_never
